--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "yard3",
+  "name": "@skeate/yard3",
   "version": "0.7.3",
   "description": "yet another react-d3 integration library",
   "scripts": {
     "lint": "eslint './src/**/*'",
     "dev": "webpack-dev-server --devtool eval --progress",
     "build": "rm -rf dist && babel -d dist src",
-    "prepublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "test": "echo \"Error: no tests ...yet\" && exit 1",
     "styleguide-server": "styleguidist server",
     "styleguide-build": "styleguidist build"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jameslaneconkling/yard3.git"
+    "url": "https://github.com/skeate/yard3.git"
   },
   "keywords": [
     "react",
