--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/skeate/yard3.git"
+    "url": "https://github.com/skeate/yard.git"
   },
   "keywords": [
     "react",
